chore(form-prospect): toast added

--- a/src/app/form-prospect/form-prospect.component.html
+++ b/src/app/form-prospect/form-prospect.component.html
@@ -324,3 +324,10 @@
   </div>
   <app-terms></app-terms>
 </div>
+
+<div class="toast-container" *ngIf='signupSuccess'>
+  <p class="toast-content">
+    <span class="fa fa-check"></span> 
+    Cadastro realizado com sucesso
+  </p>
+</div>
