wip(landing-footer)add hiperlink footer to cookies

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -145,5 +145,8 @@
   </div>
   <div class="footer-copyright">
     <p>AIESEC do Brasil {{year}}. Todos os direitos reservados.</p>
+    <div class="text-cookies">
+      <a target="_blank" href="https://aiesec.org.br/assets/politica_cookies_ptbr.pdf">Política de Cookies</a>
+    </div>
   </div>
 </footer>
