--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,103 @@
+#content-snackbar-top {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99999;
+    background-color: #000;
+    &.fadeOut {
+        display: none !important;
+    }
+    &.fadeIn {
+        display: flex !important;
+    }
+
+    #snackbar {
+        /* Hidden by default. Visible on click */
+        width: 100%;
+        /* Set a default minimum width */
+        margin: auto;
+        /* Black background color */
+        color: #fff;
+        /* White text color */
+        /* Centered text */
+        border-radius: 0.25rem;
+        /* Rounded borders */
+        padding: 5px 15px;
+        /* Padding */
+        position: relative;
+        /* Sit on top of the screen */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+
+        .box-info {
+          font-size: 12px;
+          font-style: italic !important;
+          margin-right: 6px;
+
+          p {
+          font-size: 12px;
+          color: #037ef3;
+          margin-bottom: 0;
+          font-style: unset;
+          white-space: nowrap;
+          }
+        }
+
+        .box-close {
+          margin-right: 2%;
+          margin-left: 2%;
+          width: 2%;
+          font-size: 12px;
+          justify-content: end;
+        }
+
+        .box-href {
+          white-space: nowrap;
+          font-size: 14px;
+          text-align: center;
+          padding: 1px;
+          border-bottom: 1px solid #037ef3;
+
+          a {
+            margin: 0;
+            color: #fff
+          }
+        }
+
+        .icon-close {
+          color: #fff;
+          cursor: pointer;
+          margin-top: 2px;
+        }
+
+        /* Add a z-index if needed */
+        &.show {
+            /* Show the snackbar */
+            /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+      However, delay the fade out process for 2.5 seconds */
+            -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+            animation: fadein 0.5s, fadeout 0.5s 2.5s;
+        }
+
+        button {
+            margin-left: 20px;
+            padding: 5px 15px;
+            font-size: 12px;
+            line-height: 15px;
+        }
+
+        a {
+            margin-left: 10px;
+        }
+    }
+}
+
 #content-snackbar {
     width: 100%;
     position: fixed;
@@ -37,7 +137,7 @@
         /* Add a z-index if needed */
         &.show {
             /* Show the snackbar */
-            /* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
+            /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
       However, delay the fade out process for 2.5 seconds */
             -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
             animation: fadein 0.5s, fadeout 0.5s 2.5s;
@@ -55,7 +155,6 @@
         }
     }
 }
-
 
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
@@ -103,7 +202,27 @@
     }
 }
 
+.show-message-mobile {
+  display: none;
+}
+
+.show-message {
+  display: inline;
+}
+
 @media screen and (max-width: 991px) {
+  .show-message-mobile {
+    display: inline;
+  }
+
+  .show-message {
+    display: none;
+  }
+
+  .box-info {
+    width: 56%;
+  }
+
     #content-snackbar {
         #snackbar {
             display: block;
