wip(app.component.scss)ajust text covid-19

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div id="snackbar">
     <div class="box-info">
       <p>COVID-19: Informações atuais de segurança</p>
-      <span class="show-message-mobile">Antes de fazer planos de viagem com a AIESEC, informe-se sobre o surto de COVID-19</span>
+      <span class="show-message-mobile">Antes de fazer planos com a AIESEC, informe-se sobre o COVID-19</span>
       <span class="show-message">Sua segurança sempre vem em primeiro lugar. Com o atual surto do novo
       Coronavirus (COVID-19), aconselhamos que você esteja ciente de todas as informações mais
       recentes publicadas pela OMS ou pela secretaria de saúde do seu estado antes de fazer qualquer plano de viagem com a
