fix(app.component)remove material icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank">Saiba Mais <span class="responsive-text">(OMS)</span></a>
     </div>
     <div class="box-close">
-      <mat-icon (click)="hideSnackBarTop()" class="icon-close" aria-hidden="false" aria-label="Example home icon">close</mat-icon>
+      <i (click)="hideSnackBarTop()" class="fas fa-times icon-close"></i>
     </div>
   </div>
 </div>
