--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -74,6 +74,7 @@
           color: #fff;
           cursor: pointer;
           margin-top: 2px;
+          font-size: 20px;
         }
 
         /* Add a z-index if needed */
