--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -220,7 +220,7 @@ ul#menu {
         display: flex;
         justify-content: space-between;
         height: 74px;
-        padding: 0 50px;
+        padding: 0 20px 0 10px;
 
         .logo-aiesec,
         .logo-menu {
@@ -292,7 +292,7 @@ ul#menu {
                         display: none;
                         left: 0;
                         top: 40px;
-                        padding-bottom: 10px;
+                        padding-bottom: 5px;
                         a:hover {
                             text-decoration: none;
                             color: #fff;
@@ -314,7 +314,7 @@ ul#menu {
     }
 }
 
-@media (min-width: 990px) and (max-width: 1100px) {
+@media (min-width: 991px) and (max-width: 1270px) {
     #header-product .container {
         ul#menu {
             li {
@@ -326,6 +326,14 @@ ul#menu {
 }
 
 @media (max-width: 990px) {
+    .button-covid {
+      div {
+        color: #212529 !important;
+        font-weight: bold !important;
+        font-size: 20px !important;
+      }
+    }
+
     #fixedMenu {
         background-color: white;
         height: 50px;
