fix(landing-page-menu)ajust link position

--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -314,6 +314,10 @@ ul#menu {
     }
 }
 
+.button-covid:link {
+  text-decoration: none;
+}
+
 @media (min-width: 991px) and (max-width: 1270px) {
     #header-product .container {
         ul#menu {
