fix(landing-page and footer)change links

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -102,7 +102,7 @@
             <p class="semibold footer-link-title">Planeje sua viagem</p>
             <p>
               <a (click)="goToPassagens()"
-                href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower"
+                href="https://www.vayagora.com/"
                 target="_blank">Passagens Aéreas</a>
             </p>
             <p>
