--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -56,7 +56,7 @@
             <li>
               Planeje sua viagem
               <ul class="animated fadeIn faster ul-travel">
-                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower"
+                <a href="https://www.vayagora.com/"
                   target="_blank">
                   <li (click)='goToPass()'>
                     Passagens Aéreas
@@ -165,7 +165,7 @@
               <hr>
               <ul class="mobile-nav-menu">
                 <span class="menu-header">Planeje sua viagem</span>
-                <a href="https://www.maxmilhas.com.br/?utm_source=aiesec&utm_medium=afiliados&utm_campaign=77a6ec5a_paid_lower"
+                <a href="https://www.vayagora.com/"
                   target="_blank">
                   <li (click)='goToPass()'>
                     Passagens Aéreas
