--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -1,7 +1,7 @@
 <head>
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 </head>
-<div id="step1" class="form-talentos-globais"
+<div id="step1" class="form-talentos-globais" [ngClass] = "{ 'only-form' : onlyForm }"
   [ngClass]="{'full-screen': formedUser, 'full-screen-embedded': embeddedForm}">
   <div class="full-width">
     <!-- Header -->
@@ -280,7 +280,7 @@
 
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
               <div class="col">
-                <button type="button" (click)="submit()" class="btn btn-primary" [ngx-scroll-to]="'#header-talentos-globais'" 
+                <button type="button" (click)="submit()" class="btn btn-primary" [ngx-scroll-to]="'#header-talentos-globais'"
                 [ngx-scroll-to-offset]="-120"
                 [disabled]='form.invalid || (!matchDate || unableToSubmit())'>Enviar</button>
               </div>
